# vala-manuscript

./: .buildconfig  .editorconfig  .gitignore  .valalintrc  LICENSE  README.md  build-deb.sh  format-all.sh  meson.build  uncrustify.cfg
.github/workflows/: flatpak.yml  lint.yml  main.yml  meson.yml
data/: application-manuscript.xml  com.github.sixpounder.manuscript.appdata.xml  com.github.sixpounder.manuscript.desktop  com.github.sixpounder.manuscript.gresource.xml  com.github.sixpounder.manuscript.gschema.xml  com.github.sixpounder.write.appdata.xml  com.github.sixpounder.write.desktop  com.github.sixpounder.write.gschema.xml  meson.build
data/schemes/: com.github.sixpounder.manuscript-dark.xml  com.github.sixpounder.manuscript-light.xml
data/styles/: manuscript.buttons.css  manuscript.css  manuscript.fonts.css
debian/: changelog  control  copyright  rules
flatpak/: com.github.sixpounder.manuscript.yml
meson/: post_install.py
po/: POTFILES  com.github.sixpounder.manuscript.pot  com.github.sixpounder.write.pot  en.po  it.po  meson.build
src/: AppSettings.vala  Constants.vala  DocumentTagTable.vala  Editor.vala  EditorPage.vala  EditorWindow.vala  FileUtils.vala  Globals.vala  Header.vala  MainWindow.vala  Palettes.vala  SettingsPopover.vala  Sidebar.vala  StatusBar.vala  WelcomeView.vala  Window.vala  main.vala  meson.build
src/compilers/: Base.vala  Html.vala  Markdown.vala  Pdf.vala  Plain.vala  Utils.vala
src/dialogs/: ExportDialog.vala  ExportMetrics.vala  FileSaveDialog.vala  GenericDialog.vala  HintsDialog.vala  ImportDialog.vala  InfoBar.vala  InvalidFileDialog.vala  QuitDialog.vala
src/menus/: MainMenu.vala
src/models/: AnalyzeTask.vala  Chapter.vala  ChapterChunk.vala  CharacterSheetChunk.vala  ChunkType.vala  CoverChunk.vala  Document.vala  DocumentChange.vala  DocumentChunk.vala  DocumentSettings.vala  DocumentTagTable.vala  ExportFormat.vala  FootNote.vala  LoadState.vala  NoteChunk.vala  Store.vala  TextBuffer.vala  Utils.vala
src/models/lib/: DocumentBackend.vala  MarkupParser.vala  NotesParser.vala  Parser.vala  RichTextParser.vala  TextBufferSerializer.vala
src/protocols/: Artifacts.vala  Editor.vala
src/schemes/: markdown.xml
src/services/: ActionManager.vala  AppSettings.vala  DocumentManager.vala  I18n.vala  Notification.vala  ThreadPool.vala
src/utils/: Builders.vala  Easing.vala  FileUtils.vala  Keys.vala  Lists.vala  Math.vala  Stack.vala  Streams.vala  StringUtils.vala  StyleProvider.vala  Threads.vala
src/widgets/: AddChunkPopover.vala  CharacterSheetEditor.vala  ChunkPreview.vala  DocumentSettings.vala  DocumentSourceList.vala  DocumentTab.vala  DocumentsNotebook.vala  Editor.vala  EditorCourtesyView.vala  EditorPage.vala  EditorTab.vala  EditorView.vala  EditorsController.vala  EditorsNotebook.vala  ExportPopover.vala  FileNotFound.vala  Header.vala  MenuButton.vala  QuickOpenEntry.vala  QuickOpenPanel.vala  ScrollProgress.vala  SearchBar.vala  SearchPanel.vala  SettingsPopover.vala  Sidebar.vala  SidebarRow.vala  SourceListCategoryItem.vala  SourceListChunkItem.vala  StatusBar.vala  TextSizer.vala  ThemeButton.vala  WelcomeView.vala
src/widgets/document-explorer/: DocumentExplorer.vala  DocumentExplorerItem.vala
src/widgets/editors/: CharacterSheetEditor.vala  CoverCanvas.vala  CoverEditor.vala  DocumentTagTable.vala  EditorToolbar.vala  EditorView.vala  EditorsController.vala  FontStyleProvider.vala  FormatToolbar.vala  TextEditor.vala  TextEditorView.vala
src/widgets/editors/artifacts/: FootNoteIndicator.vala  TextHighlightIndicator.vala
src/widgets/settings/: Covers.vala  General.vala  Metrics.vala  Typography.vala
